@@ -196,6 +196,7 @@ parse_entry(char *buf, size_t l, struct stat *s)
 			e->f_name_size = atoi(pos); /* checks */
 			pos = n + 1;
 
+			/* dev file? */
 			if (S_ISCHR(e->f_mode) || S_ISBLK(e->f_mode)) {
 				int major, minor;
 				n = strchr(pos, ',');
@@ -207,37 +208,17 @@ parse_entry(char *buf, size_t l, struct stat *s)
 				major = atoi(pos); minor = atoi(n + 1);
 				e->f_size = 0;
 				e->f_rdev = makedev(major, minor);
-
-#if 0
-				if (stat != NO_STAT_CONTENT) {
-					/* there are entries left, correctly
-					 * set the pointer 
-					 */
-					pos = strchr(n + 1, ' ');
-					pos++;
-				}
-#endif
-			} else {
-				/* XXX check */
+			} else 
 				e->f_size = atoi(pos);
-#if 0
-				} else {
-					n = strchr(pos, ' ');
-					if (!n) {
-						msg(_("Malformed input for file size at line: %zd"), l);
-						return NULL;
-					}
-					/* atoi? */
-					e->f_size = atoi(pos);
-					pos = n + 1;
-				}
-#endif
-			}
+			
 			break;
 	}
 	return e;
 }
 
+/* NEED TO FIX THIS, the the gfunc equavalent */
+
+#if 0
 /* ALmost the same of entry_print_data in gfunc.c, but
  * not quite as we don't don't use FILE* structs here
  * for instance. TODO: integrate the two functions?
@@ -303,3 +284,4 @@ rdup_write_data(__attribute__((unused)) struct rdup *e, char *buf, size_t len) {
 		return -1;
 	return 0;
 }
+#endif
