@@ -1,4 +1,9 @@
 09 Aug 2009: 1.1.0-dev0 Miek <rdup@miek.nl>
     * Format change: add username, groupname and mtime
       Always output the files' contents
+      %U username
+      %G groupname
+      %t is mtime of the fs object
     * Adapt all utils to this format change
+    * Loads of code cleanups
+
